@@ -1,4 +1,4 @@
 EBUILD cl-gnome-meta-2.28-r3.ebuild 3511 RMD160 e086ed94edc021aac2dd7a547cf068c343222f24 SHA1 ae3f7cc8ab2ca641a0bf1433503b7b07b033630f SHA256 5b8705ba1e1bce87e3c1c481c27bc019f42b24410deb08c29a795b789de4537f
 EBUILD cl-gnome-meta-2.32-r2.ebuild 3970 RMD160 0f44a6da4e6912b3464c31d313a2393fd69658e8 SHA1 73d0c9edda1e75af1c4310515d5ac3c194ab1f0c SHA256 529ec357a3fe9906214f67a732329084e760c79ca0955e354a8a1a9ee26639dd
-EBUILD cl-gnome-meta-3.2.ebuild 513 RMD160 092fc1026487992ceefabad7d379def3fdbaf004 SHA1 d93a360e69ce53550889f35afbb7e337a6217b3c SHA256 370af944eed9e8591d6ed1d7c87d036486e5720931d23973f9b0ebb0c58a9390
-MISC ChangeLog 1697 RMD160 fcef9c1608fe2a2e7d5bacca5612d27797417e0c SHA1 ae6c782e52334e5172fa473c69b944917168cbd5 SHA256 143d69bc8022b84613ecc61456c0cd2cd7abb2412456f6a47b9be23ff7218ea8
+EBUILD cl-gnome-meta-3.2.ebuild 513 RMD160 baf2bac4a05ca1d34149cb07c489bd16a55f6d65 SHA1 977c674755bb80e94fd99dedfcfb98208c811dce SHA256 0854d695d3292730782d3104f719e412cb52468ae3010837a41b5a347ed16709
+MISC ChangeLog 1808 RMD160 ffef4a2aa8a9888d2cd1aa56cd64460a2d7f60d7 SHA1 223fd4c81940c705b49419655abe6ec7e761c4c8 SHA256 a23634d855ac6f49ccf00b3c0d040a179b170548fb01130eeced32df9aacb7f7
