@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/cl-gnome-meta
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*cl-gnome-meta-3.2 (23 Jan 2012)
+
+  23 Jan 2012; <guest@gentoo.org> +cl-gnome-meta-3.2.ebuild:
+  version bump
 
 *cl-gnome-meta-2.32-r2 (02 Dec 2011)
 
